Reduce width of gallery grid container to 70% for screens 1440px+ wide to avoid the photos appearing too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1103,6 +1103,10 @@ button:hover {
         margin-bottom: -2px; 
     }
 
+    #gallery-container {
+        width: 70%;  
+    }
+
     .gallery-heading {
         font-size: 1.4em;
     }
